# baseball_analytics_book

./: .gitignore  pyproject.toml
baseball_data/: extraction_runner.py  extractor.py  lahman_fetcher.py  main.py  nfl_savant_fetcher.py  retrosheet_fetcher.py
baseball_data/chapter_1/: gamelog_desc.txt  lahman_analysis.py  pybaseball_analysis.py  retrosheet_analysis.py
baseball_data/chapter_1/rs_event/: batting_adj_event.py  com_event.py  data_event.py  id_event.py  info_event.py  order_adj_event.py  pitching_adj_event.py  play_event.py  rs_event.py  rs_event_factory.py  runner_adj_event.py  start_event.py  sub_event.py  version_event.py
baseball_data/chapter_4/: lahman_analysis.py  lahman_wpct.csv  retrosheet_analysis.py  retrosheet_config.json
baseball_data/chapter_5/: main.py
baseball_data/data_structures/: auto_name.py  base.py  count.py  fielding_position.py  game.py  game_of_day.py  handed.py  league.py  pitch.py  player.py  player_side.py  team.py  team_side.py
