[tool.poetry]
name = "baseball_data"
version = "0.1.0"
description = ""
authors = ["Fredrick Stakem <fstakem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.2.0"
ipdb = "^0.13.9"
wget = "^3.2"
pybaseball = "^2.2.1"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
PyQt5 = "^5.15.6"
sklearn = "^0.0"
skimpy = "^0.0.5"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
